FUSION-5868 - Fixed z-index ordering calendar table header

--- a/src/styles/shared/_mcs-theme.scss
+++ b/src/styles/shared/_mcs-theme.scss
@@ -45,7 +45,7 @@ $font-feature-setting: 'liga';
 }
 
 .mcs-overlay-theme {
-  z-index: 1250;
+  z-index: $zindex-overlay;
 }
 
 $custom-typography: mat-typography-config(
